fixed issue with header/footer not staying in place when too much content was between them

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,8 +47,8 @@ html, body {
 
 .mainContent {
   /* background-color: red; */
-  height: 100%;
-  width: 100%;
+  flex: 1;
+  overflow-y: auto;
 }
 
 .usedButton {
